# sam_finetuning_utils

./: .gitignore  Dockerfile  adaptive_histogram_equalization.py  automatic_3d_segmentation.py  benchmark_segmentation.py  default_config.json  finetune.py  micro-sam.def  notes.md  open_napari.py  pyproject.toml  run_auto_segmentation.sh  run_finetune.sh  used_channels.txt  used_channels_WGA.txt
.github/workflows/: build-docker.yaml
sam_finetuning_utils/: adaptive_histogram_equalization.py  automatic_3d_segmentation.py  benchmark_segmentation.py  finetune.py
sample_data/: start_napari.py
sample_data/demo_embeddings_crop_unperturbed.tiff/: .zattrs
sample_data/demo_embeddings_crop_unperturbed.tiff/features/: .zarray  0.0.0.0.0  1.0.0.0.0  2.0.0.0.0
