[project]
description = "utils to finetune micro-sam and generate embeddings for assisted segmentation."
name = "sam_finetuning_utils"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
  "bioio==1.1.0",
  "micro-sam @ git+https://github.com/tim-hudelmaier/micro-sam.git",
  "mobile-sam @ git+https://github.com/ChaoningZhang/MobileSAM.git",
  "loguru",
  "bioio-ome-tiff>=1.0.1,<2",
  "bioio-lif>=1.0.0,<2",
  "einops>=0.8.0,<0.9",
  "fire>=0.7.0,<0.8",
  "midi-app-controller>=0.1.1,<0.2",
  "bioio-tifffile>=1.0.0,<2",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
sam_finetuning_utils = { path = ".", editable = true }

[tool.pixi.tasks]
demo = "pixi r python sample_data/start_napari.py"

[tool.pixi.dependencies]
ipython = ">=8.31.0,<9"
protobuf = "<5"
magicgui = ">=0.9.1,<0.10"
natsort = ">=8.4.0,<9"
pip = ">=24.3.1,<25"
pooch = ">=1.8.2,<2"
pyqt = ">=5.15.9,<6"
python-xxhash = ">=3.5.0,<4"
segment-anything = ">=1.0.1,<2"
torchvision = ">=0.19.1,<0.20"
tqdm = ">=4.67.1,<5"
timm = ">=1.0.12,<2"
zarr = "<2.18.0"
torch_em = ">=0.7.0"
pytorch = ">=2.4"
python-elf = ">=0.4.8"
napari = ">=0.5.0"
imageio = ">=2.11.0,<2.28.0"
imagecodecs = ">=2024.1.1,<2025"

[tool.pixi.feature.cuda]
system-requirements = { cuda = "12" } # this will support CUDA minor/patch versions!

# Environments
[tool.pixi.environments]
cuda = ["cuda"] # maps my "cuda" environment to the "cuda" feature
